fazladan readme silindi

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
 <h1>Umut Tosun</h1>
 <h2>Hakkımızda</h2>
+<p>Merhaba ben Umut Tosun.Bursa'da yaşıyorum. Bilim kurgu izlemeyi ve futbol oynamayı çok severim.</p>
+<p>Yüzüklerin Efendisi hayranıyım.Onun yanı sıra Fringe dizisine bayılırım.Yazılım ile ilgileniyorum.Patika dev sayesinde kendimi geliştiriyorum</p>
