--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 <h2>Hakkımızda</h2>
 <p>Merhaba ben Umut Tosun.Bursa'da yaşıyorum. Bilim kurgu izlemeyi ve futbol oynamayı çok severim.</p>
 <p>Yüzüklerin Efendisi hayranıyım.Onun yanı sıra Fringe dizisine bayılırım.Yazılım ile ilgileniyorum.Patika dev sayesinde kendimi geliştiriyorum</p>
+<h2>Sevdiğim Diziler</h2>
+<h3>
+<li>Fringe</li>
+<li>Lost</li>
+<li>Black List</li>
+</h3>
+<!--fringe hakkında bilgi ver.-->
+Fringe: Paralel evreni anlatan bilim kurgu dizisidir.Günlük gerçekleşen olayların yanı sıra belli bir ana konu vardır. <p>Günlük oluşan olaylar aslında ana konunun belli bir parçasını oluşturmaktadır.</p>  
