değişiklikler eklendi ödev2

--- a/index.html
+++ b/index.html
@@ -1,12 +1,51 @@
+<title>umut web sayfası</title>
 <h1>Umut Tosun</h1>
 <h2>Hakkımızda</h2>
 <p>Merhaba ben Umut Tosun.Bursa'da yaşıyorum. Bilim kurgu izlemeyi ve futbol oynamayı çok severim.</p>
 <p>Yüzüklerin Efendisi hayranıyım.Onun yanı sıra Fringe dizisine bayılırım.Yazılım ile ilgileniyorum.Patika dev sayesinde kendimi geliştiriyorum</p>
-<h2>Sevdiğim Diziler</h2>
-<h3>
-<li>Fringe</li>
-<li>Lost</li>
-<li>Black List</li>
-</h3>
+<h2>İlgi Alanlarım</h2>
+<ol>
+    <li>
+   <em> Filmler</em>
+<ul>
+    <li>
+    <a href="https://www.imdb.com/title/tt0114369/">Se7en</a> 
+   </li>
+
+<li>
+Ahlat Ağacı
+</li>
+
+<li>
+    The Lord Of The Rings
+</li>
+</ul>
+</li>
+<li>
+<em>Diziler</em>
+<ul>
+    <li>
+        Fringe
+    </li>
+    <li>Lost
+
+    </li>
+    <li>
+        Braking Bad
+    </li>
+</ul>
+</li>
+<li>
+<em>Kitaplar </em>
+<ul>
+   <li><a href="https://www.goodreads.com/book/show/9274970-gazap-z-mleri"> <strong>Gazap Üzümleri</strong> </a></li>
+    <li> <strong>Fareler Ve İnsanlar</strong> </li>
+    <li> <strong>Olasılıksız</strong> </li>
+</ul>
+</li>
+</ol>
 <!--fringe hakkında bilgi ver.-->
-Fringe: Paralel evreni anlatan bilim kurgu dizisidir.Günlük gerçekleşen olayların yanı sıra belli bir ana konu vardır. <p>Günlük oluşan olaylar aslında ana konunun belli bir parçasını oluşturmaktadır.</p>  
+<h2>Fringe</h2>
+<img width="350" height="350" border="5" src="../2.jpg" alt="Fringe Fotosu" >
+<br>Fringe: Paralel evreni anlatan bilim kurgu dizisidir.Günlük gerçekleşen olayların yanı sıra belli bir ana konu vardır.<br> Günlük oluşan olaylar aslında ana konunun belli bir parçasını oluşturmaktadır.
+
